# url-xs

./: .envExample  .gitignore  Cargo.toml  Dockerfile  Dockerfile.prod  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: rust.yml
.sqlx/: query-06c8f18297e2dd103eaf69e627ea3dd01b7b222d952353b66b3f0bd1b71b51a8.json  query-937529c287de95600034df495151508837ab328f887388e17ff86c6713aade4c.json  query-a77c69506ca0388c231cb808f73d04c6532085c332fcf1d181a6f40abeb7b3a0.json  query-be034ce2810e41ad1af7b2c947cebcf30dd2e92b0aa83678741da4e9ff482da1.json  query-c95f97ab2073c2b74c127651f32f74dfb4f43c55e15be2e50d24b83ecdc925cb.json  query-dd8cd00d8f68fd41f6d88e4a737c1107e1fa56c565bfcb45f0947e2fd0091832.json  query-f14efded83462babe5e76568c7d22295cd0ad14bf80d4ac24903b55e602e5b02.json  query-f30e03118e3a59319ddf9c73ac54c36bc0832c38b9cc82ea0a9a7e7b5ba48fde.json
migrations/: 20240118162858_setup.down.sql  20240118162858_setup.up.sql  20240307183607_urls.down.sql  20240307183607_urls.up.sql
src/: lib.rs  main.rs  routes.rs  server.rs
src/application/: mod.rs  url_dtos.rs  url_repositories.rs  url_use_cases.rs
src/controllers/: create.rs  create_trainer.rs  get_user_urls.rs  mod.rs  redirect.rs
src/domain/models/: url.rs
src/infrastructure/: mod.rs
src/infrastructure/controllers/: health.rs  (+2 more)
src/models/: mod.rs  trainer.rs  url.rs
tests/: _create_test.rs  create_test.rs  create_trainer_test.rs  get_user_urls_test.rs  health_test.rs  mod.rs  redirect_test.rs  utils.rs
tests/url_tests/: create_test.rs  get_user_urls_test.rs  mod.rs  redirect_test.rs  shorten_test.rs
(+2 files in other folders)
