[package]
name = "api-service-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Web framework
actix-web = "4"
actix-cors = "0.7.0"
actix-rt = "2.9.0"

#Postgres access library
sqlx = { version = "0.7.0", features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "chrono",
    "uuid",
] }

# Data serialization library
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.1"

# Data validation library
validator = { version = "0.16", features = ["derive"] }

# Other utils
chrono = { version = "0.4.22", features = ["serde"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "serde"] }
env_logger = "0.10.2"
color-eyre = "0.5"
log = "0.4.20"
