[package]
name = "url-xs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Web framework
actix-web = "4"
actix-cors = "0.7.0"
actix-rt = "2.9.0"

#Postgres access library
sqlx = { version = "0.7.0", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
    "chrono",
] }

# Data serialization library
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.1"

# Other utils
chrono = { version = "0.4.22", features = ["serde"] }
env_logger = "0.10.2"
color-eyre = "0.5"
log = "0.4.20"
nanoid = "0.4.0"
dotenv = "0.15.0"
url = "2.5.0"
rand = "0.8.5"
